infrastructure/keycloak/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:24.0.1
          ports:
            - containerPort: 8080
          args: ["start-dev", "--import-realm"]
          volumeMounts:
            - name: keycloak-realm
              mountPath: /opt/keycloak/data/import
      volumes:
        - name: keycloak-realm
          configMap:
            name: keycloak-realm-config
