infrastructure/keycloak/keycloak-mysql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak-mysql
spec:
  selector:
    matchLabels:
      app: keycloak-mysql
  serviceName: "keycloak-mysql"
  replicas: 1
  template:
    metadata:
      labels:
        app: keycloak-mysql
    spec:
      containers:
        - name: keycloak-mysql
          image: mysql:8
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: mysql-persistent-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
