infrastructure/keycloak/keycloak-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-mysql
spec:
  selector:
    app: keycloak-mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  clusterIP: 10.245.171.111  # Required for StatefulSet for stable network identity. Pick and IP from your cluster
