infrastructure/keycloak/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: keycloak
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod" 
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  tls:
  - hosts:
    - keycloak-dev.seamlessremit.com
    secretName: keycloak-tls-secret
  rules:
  - host: keycloak-dev.seamlessremit.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak  
            port: 
              number: 8080
